--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,9 +24,6 @@
         android:theme="@style/Theme.VideoApp"
         tools:targetApi="31">
         <activity
-            android:name=".CallActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -34,6 +32,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        
+        <service android:name=".service.CallService"
+            android:foregroundServiceType="dataSync"
+            tools:ignore="ForeGroundServicePermission"/>
+        <receiver android:name=".service.CallBroadcastReceiver"/>
 
+    </application>
+    
 </manifest>
